h1. Release Notes for Sirius

{toc:style=disc|minLevel=2|maxLevel=3}

This document contains the release notes for recent major releases of Sirius. See also "the release notes from previous versions":Release_Notes_Previous.html for details about older releases.

h2(#sirius4.0.0). Changes in Sirius 4.0.0

h3. Developer-Visible Changes

h4. Changes in @org.eclipse.sirius.ui@

* <span class="label label-info">MOVED</span> The classes @org.eclipse.sirius.ui.business.api.action.RefreshActionListenerRegistry@ and @org.eclipse.sirius.ui.business.api.action.IRefreshActionListener@ have been moved out of the Sirius UI bundle to the Sirius bundle, they are now known as @org.eclipse.sirius.business.api.action.RefreshActionListenerRegistry@ and @org.eclipse.sirius.business.api.action.IRefreshActionListener@.
* <span class="label label-danger">Removed</span> The constant @IMAGES_RESOURCE_NAME@ in @org.eclipse.sirius.diagram.ui.business.api.image.ImageSelector@ has been removed since it was not used anymore.

h2(#sirius3.1.0). Changes in Sirius 3.1.0

h3. User-Visible Changes

* <span class="label label-success">Added</span> A new feature allows to snap to all shapes (instead of just to snap to brother shapes). The <kdb>F4</kdb> shortcut key activates this mode when you resize a node, move a node or move a bendpoint of edge, see "documentation":./user/diagrams/Diagrams.html#snap_to_shapes for details.

h3. Developer-Visible Changes

h4. Changes in @org.eclipse.sirius.ext.gef@

* <span class="label label-success">Added</span> The new class @org.eclipse.sirius.ext.gef.query.EditPartQuery@ has been added. It allows to retrieve all children of the current part.

h4. Changes in @org.eclipse.sirius.tests.swtbot.support@
