@@ -28,36 +28,37 @@ Export-Package: org.eclipse.sirius.diagram;version="3.0.0",
  org.eclipse.sirius.diagram.business.api.helper.layers;version="2.0.4",
  org.eclipse.sirius.diagram.business.api.query;version="3.0.0",
  org.eclipse.sirius.diagram.business.api.refresh;version="2.0.4",
- org.eclipse.sirius.diagram.business.internal.color;x-internal:=true;version="3.0.0",
- org.eclipse.sirius.diagram.business.internal.componentization.mappings;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.business.internal.componentization.mappings.table;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.business.internal.componentization.mappings.visitor;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.business.internal.dialect;x-internal:=true;version="2.1.0",
- org.eclipse.sirius.diagram.business.internal.dialect.description;x-internal:=true;version="3.0.0",
- org.eclipse.sirius.diagram.business.internal.dialect.identifier;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.business.internal.edit.helpers;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.business.internal.experimental.sync;x-internal:=true;version="3.0.0",
- org.eclipse.sirius.diagram.business.internal.helper.display;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.business.internal.helper.refresh;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.business.internal.helper.task;x-internal:=true;version="2.1.0",
- org.eclipse.sirius.diagram.business.internal.helper.task.operations;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.business.internal.layers;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.business.internal.metamodel.description.extensions;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.business.internal.metamodel.description.filter.spec;x-internal:=true;version="3.0.0",
- org.eclipse.sirius.diagram.business.internal.metamodel.description.operations;x-internal:=true;version="3.0.0",
- org.eclipse.sirius.diagram.business.internal.metamodel.description.spec;x-internal:=true;version="3.0.0",
- org.eclipse.sirius.diagram.business.internal.metamodel.description.style.spec;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.business.internal.metamodel.description.tool.spec;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.business.internal.metamodel.helper;x-internal:=true;version="3.0.0",
- org.eclipse.sirius.diagram.business.internal.metamodel.operations;x-internal:=true;version="3.0.0",
- org.eclipse.sirius.diagram.business.internal.metamodel.spec;x-internal:=true;version="3.0.0",
- org.eclipse.sirius.diagram.business.internal.migration;x-internal:=true;version="3.0.0",
- org.eclipse.sirius.diagram.business.internal.query;x-internal:=true;version="3.0.0",
- org.eclipse.sirius.diagram.business.internal.repair.commands;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.business.internal.repair.resource;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.business.internal.repair.resource.session.diagram.data;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.business.internal.sync;x-internal:=true;version="2.1.0",
- org.eclipse.sirius.diagram.business.internal.sync.visitor;x-internal:=true;version="2.0.4",
+ org.eclipse.sirius.diagram.business.internal.color;version="3.0.0";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.componentization.mappings;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.componentization.mappings.table;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.componentization.mappings.visitor;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.dialect;version="2.1.0";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.dialect.description;version="3.0.0";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.dialect.identifier;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.edit.helpers;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.experimental.sync;version="3.0.0";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.helper.display;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.helper.refresh;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.helper.task;version="2.1.0";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.helper.task.operations;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.layers;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.metamodel.description.extensions;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.metamodel.description.filter.spec;version="3.0.0";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.metamodel.description.operations;version="3.0.0";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.metamodel.description.spec;version="3.0.0";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.metamodel.description.style.spec;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.metamodel.description.tool.spec;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.metamodel.helper;version="3.0.0";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.metamodel.operations;version="3.0.0";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.metamodel.spec;version="3.0.0";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.migration;version="3.0.0";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.query;version="3.0.0";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.refresh;version="4.0.0";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.repair.commands;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.repair.resource;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.repair.resource.session.diagram.data;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.sync;version="2.1.0";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.sync.visitor;version="2.0.4";x-internal:=true,
  org.eclipse.sirius.diagram.description;version="2.0.4",
  org.eclipse.sirius.diagram.description.concern;version="2.0.4",
  org.eclipse.sirius.diagram.description.concern.impl;version="2.0.4",
@@ -74,22 +75,22 @@ Export-Package: org.eclipse.sirius.diagram;version="3.0.0",
  org.eclipse.sirius.diagram.description.tool.util;version="2.0.4",
  org.eclipse.sirius.diagram.description.util;version="2.0.4",
  org.eclipse.sirius.diagram.impl;version="3.0.0",
- org.eclipse.sirius.diagram.internal.edit.helpers;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.internal.preferences;x-internal:=true;version="2.0.4",
+ org.eclipse.sirius.diagram.internal.edit.helpers;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.internal.preferences;version="2.0.4";x-internal:=true,
  org.eclipse.sirius.diagram.tools.api.command;version="3.0.0",
  org.eclipse.sirius.diagram.tools.api.command.view;version="2.0.4",
  org.eclipse.sirius.diagram.tools.api.layout;version="2.0.0",
  org.eclipse.sirius.diagram.tools.api.preferences;version="2.0.4",
  org.eclipse.sirius.diagram.tools.api.refresh;version="2.0.4",
  org.eclipse.sirius.diagram.tools.api.validation.constraint;version="2.0.4",
- org.eclipse.sirius.diagram.tools.internal.actions.pinning;x-internal:=true;version="2.0.0",
- org.eclipse.sirius.diagram.tools.internal.command;x-internal:=true;version="3.0.0",
- org.eclipse.sirius.diagram.tools.internal.command.builders;x-internal:=true;version="3.0.0",
- org.eclipse.sirius.diagram.tools.internal.command.reconnect;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.tools.internal.commands;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.tools.internal.preferences;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.tools.internal.validation.constraints;x-internal:=true;version="2.0.4",
- org.eclipse.sirius.diagram.tools.internal.validation.description.constraints;x-internal:=true;version="2.1.0",
+ org.eclipse.sirius.diagram.tools.internal.actions.pinning;version="2.0.0";x-internal:=true,
+ org.eclipse.sirius.diagram.tools.internal.command;version="3.0.0";x-internal:=true,
+ org.eclipse.sirius.diagram.tools.internal.command.builders;version="3.0.0";x-internal:=true,
+ org.eclipse.sirius.diagram.tools.internal.command.reconnect;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.tools.internal.commands;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.tools.internal.preferences;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.tools.internal.validation.constraints;version="2.0.4";x-internal:=true,
+ org.eclipse.sirius.diagram.tools.internal.validation.description.constraints;version="2.1.0";x-internal:=true,
  org.eclipse.sirius.diagram.util;version="3.0.0"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
