@@ -72,6 +72,14 @@
 		</h4>
 		<ul>
 			<li><span class="label label-info">MOVED</span> The classes 
+				<code>DSemanticDiagramScopePredicate</code>, 
+				<code>SiriusDiagramSessionEventBroker</code>, 
+				<code>SiriusGMFSynchronizerDispatcher</code> and 
+				<code>SynchronizeGMFModelCommand</code> have been moved from the package 
+				<code>org.eclipse.sirius.diagram.ui.internal.refresh</code> from the bundle Sirius Diagram UI bundle to the package 
+				<code>org.eclipse.sirius.diagram.business.internal.refresh</code> in the bundle Sirius Diagram.
+			</li>
+			<li><span class="label label-info">MOVED</span> The classes 
 				<code>org.eclipse.sirius.ui.business.api.action.RefreshActionListenerRegistry</code> and 
 				<code>org.eclipse.sirius.ui.business.api.action.IRefreshActionListener</code> have been moved out of the Sirius UI bundle to the Sirius bundle, they are now known as 
 				<code>org.eclipse.sirius.business.api.action.RefreshActionListenerRegistry</code> and 
